feat: Добавить dao для работы с моделью film, пройти тесты Postman